--- a/src/components/common/CSVImportModal.css
+++ b/src/components/common/CSVImportModal.css
@@ -184,6 +184,7 @@
   gap: 1.5rem;
   height: 100%;
   overflow: hidden;
+  min-width: 0; /* Allow flex shrinking */
 }
 
 /* Upload Card */
@@ -414,7 +415,7 @@
 table {
   width: 100%;
   border-collapse: collapse;
-  min-width: 700px;
+  min-width: 1000px; /* Increased to fit all 5 columns comfortably */
 }
 
 thead th {
